--- a/requirements.txt
+++ b/requirements.txt
@@ -31,6 +31,8 @@ zope.interface==6.0
 pandas==2.3.2
 prometheus-client==0.20.0
 streamlit==1.38.0
-numpy==2.1.1
+numpy==2.0.2
 upstox-python-sdk==2.19.0
-
+pytest==8.3.2
+PyYAML==6.0.2
+uvloop==0.19.0
