--- a/engine_config.yaml
+++ b/engine_config.yaml
@@ -7,14 +7,14 @@ risk:
   max_open_lots: 12
   notional_premium_cap: 1500000
   max_order_rate: 25
-  no_new_entries_after: "15:10"
-  square_off_by: "15:22"
+  no_new_entries_after: "15:25"
+  square_off_by: "15:28"
 data:
   index_symbol: "NIFTY"
   lot_step: 50
   tick_size: 0.05
   price_band_low: 1.0
-  price_band_high: 9999.0
+  price_band_high: 99999.0
   holidays:
     - "2024-08-15"
     - "2024-10-02"
@@ -28,3 +28,5 @@ broker:
   ws_backoff_seconds: [1, 2, 5, 10]
   oauth_refresh_margin: 60
   max_order_rate: 15
+alerts:
+  throttle_seconds: 60
