--- a/requirements.txt
+++ b/requirements.txt
@@ -24,7 +24,7 @@ six==1.16.0
 smartapi-python==1.4.8
 Twisted==22.10.0
 txaio==23.1.1
-typing_extensions==4.6.3
+typing_extensions==4.15.0
 urllib3==2.0.3
 websocket-client==1.8.0
 zope.interface==6.0
@@ -34,5 +34,6 @@ streamlit==1.38.0
 numpy==2.0.2
 upstox-python-sdk==2.19.0
 pytest==8.3.2
+pytest-asyncio==0.23.8
 PyYAML==6.0.2
 uvloop==0.19.0
