--- a/config/app.yml
+++ b/config/app.yml
@@ -1,9 +1,15 @@
+run_id: "dev-run"
+persistence_path: "engine_state.sqlite"
+strategy_tag: "intraday-buy"
+
 data:
   index_symbol: "NIFTY"
   lot_step: 50
   tick_size: 0.05
   price_band_low: 10.0
-  price_band_high: 5000.0
+  price_band_high: 99999.0
+  expiry_ttl_minutes: 5
+  weekly_expiry_weekday: 3
   holidays:
     - "2024-08-15"
     - "2024-10-02"
@@ -21,6 +27,7 @@ risk:
   square_off_by: "15:22:00"
 
 broker:
+  max_order_rate: 15
   rest_timeout: 3.0
   ws_heartbeat_interval: 3.0
   ws_backoff_seconds: [1, 2, 5, 10]
