--- a/config/app.yml
+++ b/config/app.yml
@@ -10,6 +10,7 @@ data:
   price_band_high: 99999.0
   expiry_ttl_minutes: 5
   weekly_expiry_weekday: 3
+  subscription_expiry_preference: "current" # allowed: current | next | monthly
   holidays:
     - "2024-08-15"
     - "2024-10-02"
@@ -17,14 +18,21 @@ data:
   strike_steps:
     NIFTY: 50
     BANKNIFTY: 100
+  weekly_expiry_weekday: 1  # Tuesday (NSE rule)
+
+market_data:
+  window_steps: 4 # +/- steps around ATM
+  option_type: "BOTH" # CE | PE | BOTH
+  stream_mode: "full_d30"
+  depth_levels: 5  # render top 5 in UI to keep UI light
 
 risk:
   daily_pnl_stop: -15000
   per_symbol_loss_stop: -5000
   max_open_lots: 20
   notional_premium_cap: 250000
-  no_new_entries_after: "15:10:00"
-  square_off_by: "15:22:00"
+  no_new_entries_after: "15:32:00"
+  square_off_by: "15:32:00"
 
 broker:
   max_order_rate: 15
