--- a/config/app.yml
+++ b/config/app.yml
@@ -6,7 +6,7 @@ data:
   index_symbol: "NIFTY"
   lot_step: 75
   tick_size: 0.05
-  price_band_low: 1.0
+  price_band_low: 10
   price_band_high: 99999.0
   expiry_ttl_minutes: 5
   weekly_expiry_weekday: 3
@@ -27,10 +27,10 @@ market_data:
   depth_levels: 5  # render top 5 in UI to keep UI light
 
 risk:
-  daily_pnl_stop: -2000        # max you are willing to lose in a day
-  per_symbol_loss_stop: -2000
-  max_open_lots: 1
-  notional_premium_cap: 4000
+  daily_pnl_stop: -5000        # max you are willing to lose in a day
+  per_symbol_loss_stop: -5000
+  max_open_lots: 4
+  notional_premium_cap: 15000
   no_new_entries_after: "15:10:00"
   square_off_by: "15:20:00"
 
@@ -42,17 +42,17 @@ broker:
   oauth_refresh_margin: 60
   rate_limits:
     place:
-      rate_per_sec: 15
-      burst: 30
-    modify:
-      rate_per_sec: 12
-      burst: 24
-    cancel:
-      rate_per_sec: 12
-      burst: 24
-    history:
       rate_per_sec: 5
       burst: 10
+    modify:
+      rate_per_sec: 3
+      burst: 6
+    cancel:
+      rate_per_sec: 3
+      burst: 6
+    history:
+      rate_per_sec: 2
+      burst: 4
 
 oms:
   resubmit_backoff: 0.5
@@ -60,8 +60,17 @@ oms:
   max_inflight_orders: 8
   submit:
     default: "auto"
-    max_spread_ticks: 2
-    depth_threshold: 50
+    max_spread_ticks: 16
+    depth_threshold: 0 
+
+exit:
+  stop_pct: 0.25
+  target1_pct: 0.5
+  partial_fraction: 0.5
+  trail_lock_pct: 0.4
+  trail_giveback_pct: 0.5
+  min_trail_ticks: 3
+  max_holding_minutes: 20
 
 alerts:
   throttle_seconds: 30
@@ -73,9 +82,9 @@ replay:
   default_speed: 1.0
 
 smoke_test:
-  enabled: true           # turn on for the day
+  enabled: false           # turn on for the day
   underlying: "NIFTY"     # or "BANKNIFTY" later
   side: "CE"              # start with CALL, you can test PE on another day
   hold_seconds: 60        # start with 60s, you can bump to 120 later
   lots: 1
-  max_notional_rupees: 4000
+  max_notional_rupees: 7000
