--- a/config/app.yml
+++ b/config/app.yml
@@ -34,6 +34,16 @@ strategy:
   long_ma: 20
   iv_threshold: 0.0
   vol_breakout_mult: 1.5
+  imi_period: 14
+  pcr_extreme_high: 1.3
+  pcr_extreme_low: 0.7
+  iv_percentile_threshold: 0.6
+  iv_exit_percentile: 0.9
+  oi_volume_min_threshold: 5000
+  event_file_path: "config/events.yml"
+  gamma_threshold: 0.0
+  min_minutes_to_expiry: 30
+  event_halt_minutes: 30
 
 banknifty:
   vol_breakout_mult: 1.2
@@ -93,6 +103,7 @@ exit:
   trailing_step: 0.1
   time_buffer_minutes: 20
   partial_tp_mult: 2.0
+  at_pct: 1.0
 
 alerts:
   throttle_seconds: 30
