--- a/config/app.yml
+++ b/config/app.yml
@@ -30,50 +30,50 @@ market_data:
   max_tick_age_seconds: 2.0
 
 strategy:
-  short_ma: 5
-  long_ma: 20
+  short_ma: 3
+  long_ma: 10
   iv_threshold: 0.0
-  vol_breakout_mult: 1.5
+  vol_breakout_mult: 1.0
   imi_period: 14
-  pcr_extreme_high: 1.3
-  pcr_extreme_low: 0.7
-  iv_percentile_threshold: 0.6
+  pcr_extreme_high: 5.0
+  pcr_extreme_low: 0.3
+  iv_percentile_threshold: 0.0
   iv_exit_percentile: 0.9
-  oi_volume_min_threshold: 5000
+  oi_volume_min_threshold: 50
   event_file_path: "config/events.yml"
   gamma_threshold: 0.0
   min_minutes_to_expiry: 30
   event_halt_minutes: 30
   enable_call_entries: true
-  enable_put_entries: false
+  enable_put_entries: true
   breakout_window: 5
   breakout_margin: 5
-  volume_mult: 1.5
-  pcr_range: [0.7, 1.3]
-  spread_max_pct: 0.05
+  volume_mult: 1.0
+  pcr_range: [0.3, 5.0]
+  spread_max_pct: 0.08
 
 banknifty:
   vol_breakout_mult: 1.2
 
 risk:
-  daily_pnl_stop: -1000 # max you are willing to lose in a day
+  daily_pnl_stop: -5000 # max you are willing to lose in a day
   per_symbol_loss_stop: -1000
-  max_open_lots: 2
-  notional_premium_cap: 5000
+  max_open_lots: 1
+  notional_premium_cap: 35000
   no_new_entries_after: "15:20:00"
   square_off_by: "15:25:00"
   max_order_rate: 5
   risk_percent_per_trade: 1.0
   scalping_risk_pct: 0.5
   scalping_trades_per_hour: 30
-  max_slippage_pct_per_trade: 0.0   # 0 disables slippage halt
+  max_slippage_pct_per_trade: 0.0 # 0 disables slippage halt
   max_avg_slippage_pct_per_day: 0.0 # 0 disables
-  max_slippage_trades: 0            # 0 disables
-  max_entry_spread_pct: 0.0         # 0 disables
-  max_trades_per_day: 0             # 0 disables
-  max_consecutive_losses: 0         # 0 disables
+  max_slippage_trades: 0 # 0 disables
+  max_entry_spread_pct: 0.0 # 0 disables
+  max_trades_per_day: 5 # 0 disables
+  max_consecutive_losses: 3 # 0 disables
   max_intraday_index_move_pct_window: 0.0 # 0 disables
-  extreme_move_window_seconds: 0            # 0 disables
+  extreme_move_window_seconds: 0 # 0 disables
 
 broker:
   max_order_rate: 15
